--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/about.2ee7398834ecb40caa44.css">
+    <link rel="stylesheet" href="./assets/about.8afe8a92447c1891bf6c.css">
 </head>
 
 <body>
@@ -53,26 +53,26 @@
                 <div class="technologies__list">
                     <div class="technologies__item">
                         <p class="technologies__name">HTML</p>
-                        <img src="./images/html-icon.svg" alt="HTML icon" class="technologies__image">
+                        <img src="./images/html-icon.svg" alt="HTML иконка" class="technologies__image">
                     </div>
                     <div class="technologies__item">
                         <p class="technologies__name">CSS</p>
-                        <img src="./images/css-icon.svg" alt="CSS icon" class="technologies__image">
+                        <img src="./images/css-icon.svg" alt="CSS иконка" class="technologies__image">
                     </div>
                     <div class="technologies__item">
                         <p class="technologies__name">Java Script</p>
-                        <img src="./images/js-icon.svg" alt="Java Script icon" class="technologies__image">
+                        <img src="./images/js-icon.svg" alt="Java Script иконка" class="technologies__image">
                     </div>
                     <div class="technologies__item">
                         <p class="technologies__name">Webpack</p>
-                        <img src="./images/webpack-icon.svg" alt="Webpack icon" class="technologies__image">
+                        <img src="./images/webpack-icon.svg" alt="Webpack иконка" class="technologies__image">
                     </div>
                 </div>
             </div>
         </section>
         <section class="author root__section">
             <div class="section-content section-content_author">
-                <img src="" alt="Author photo" class="author__photo">
+                <img src="" alt="Фото автора" class="author__photo">
                 <div class="author__about">
                     <h2 class="content-title content-title_author">Об авторе</h2>
                     <p class="author__about-text">Это блок с описаением автора проекта.</p>
@@ -89,7 +89,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="" class="commits__author-photo">
+                            <img src="" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -101,7 +101,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="" class="commits__author-photo">
+                            <img src="" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -113,7 +113,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="" class="commits__author-photo">
+                            <img src="" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -125,7 +125,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="" class="commits__author-photo">
+                            <img src="" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -137,7 +137,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="" class="commits__author-photo">
+                            <img src="" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -149,7 +149,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="" class="commits__author-photo">
+                            <img src="" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -170,12 +170,12 @@
                 <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
             </menu>
             <ul class="footer__social">
-                <li><a href=""><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
-                <li><a href=""><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+                <li><a href="https://github.com/EvgeniyL0"><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100022798724794"><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/index.73256c2e7b1a841c5d7d.js"></script>
+    <script type="module" src="./assets/about.73256c2e7b1a841c5d7d.js"></script>
 </body>
 
 </html>
