--- a/analytics.html
+++ b/analytics.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/analytics.2ce0cb63d71d46c8940f.css">
+    <link rel="stylesheet" href="./assets/analytics.37cd6446a3542ea441e8.css">
 </head>
 
 <body>
@@ -93,12 +93,12 @@
                 <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
             </menu>
             <ul class="footer__social">
-                <li><a href=""><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
-                <li><a href=""><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+                <li><a href="https://github.com/EvgeniyL0"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100022798724794"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/index.58d83c547b5fd8e3224c.js"></script>
+    <script type="module" src="./assets/analytics.58d83c547b5fd8e3224c.js"></script>
 </body>
 
 </html>
