--- a/src/analytics.html
+++ b/src/analytics.html
@@ -93,8 +93,8 @@
                 <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
             </menu>
             <ul class="footer__social">
-                <li><a href=""><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
-                <li><a href=""><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+                <li><a href="https://github.com/EvgeniyL0"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100022798724794"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
             </ul>
         </footer>
     </div>
