--- a/src/index.html
+++ b/src/index.html
@@ -36,23 +36,61 @@
       <div class="section-content">
         <div class="results__loading">
           <div class="loader"></div>
-          <img src="./images/not-found.svg" alt="Sad smile" class="results__not-found-image">
+          <p class="content-subtitle content-subtitle_load">Идёт загрузка...</p>
+          <img src="./images/not-found.svg" alt="Не найдено" class="results__not-found-image">
           <h2 class="content-title content-title_load">Ничего не найдено</h2>
-          <p class="content-subtitle content-subtitle_load"></p>
+          <p class="content-subtitle content-subtitle_load">К сожалению по вашему запросу ничего не найдено</p>
         </div>
         <div class="results__wrapper">
           <div class="section-header">
             <h2 class="content-title content-title_section-header">Результаты поиска</h2>
             <a href="./analytics.html" class="section-header__link">Посмотреть аналитику &gt;</a>
           </div>
-          <div class="results__news-cards"></div>
+          <div class="results__news-cards">
+            <div class="card">
+              <img src="./images/sample.jpg" alt="Иллюстрация" class="card__image">
+              <div class="card__description">
+                <p class="card__date">2 августа, 2019</p>
+                <a href="" class="card__news-title">Национальное достояние - парки</a>
+                <p class="card__news-text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+                  складываться
+                  система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.
+                </p>
+                <p class="card__source">ЛЕНТА.РУ</p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="./images/sample.jpg" alt="Иллюстрация" class="card__image">
+              <div class="card__description">
+                <p class="card__date">2 августа, 2019</p>
+                <a href="" class="card__news-title">Национальное достояние - парки</a>
+                <p class="card__news-text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+                  складываться
+                  система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.
+                </p>
+                <p class="card__source">ЛЕНТА.РУ</p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="./images/sample.jpg" alt="Иллюстрация" class="card__image">
+              <div class="card__description">
+                <p class="card__date">2 августа, 2019</p>
+                <a href="" class="card__news-title">Национальное достояние - парки</a>
+                <p class="card__news-text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+                  складываться
+                  система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.
+                </p>
+                <p class="card__source">ЛЕНТА.РУ</p>
+              </div>
+            </div>
+          </div>
           <button class="button button_more">Показать ещё</button>
         </div>
       </div>
     </section>
     <section class="author root__section">
       <div class="section-content section-content_author">
-        <img src="" alt="Author photo" class="author__photo">
+        <img src="" alt="Фото автора" class="author__photo">
         <div class="author__about">
           <h2 class="content-title content-title_author">Об авторе</h2>
           <p class="author__about-text">Это блок с описаением автора проекта.</p>
@@ -67,8 +105,8 @@
         <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
       </menu>
       <ul class="footer__social">
-        <li><a href=""><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
-        <li><a href=""><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+        <li><a href="https://github.com/EvgeniyL0"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100022798724794"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
       </ul>
     </footer>
   </div>
