--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <div class="section-content">
         <div class="results__loading">
           <div class="loader"></div>
-          <img src="./images/not-found.svg" alt="Sad smile" class="results__not-found-image">
+          <img src="./images/not-found.svg" alt="Не найдено" class="results__not-found-image">
           <h2 class="content-title content-title_load">Ничего не найдено</h2>
           <p class="content-subtitle content-subtitle_load"></p>
         </div>
@@ -52,7 +52,7 @@
     </section>
     <section class="author root__section">
       <div class="section-content section-content_author">
-        <img src="" alt="Author photo" class="author__photo">
+        <img src="" alt="Фото автора" class="author__photo">
         <div class="author__about">
           <h2 class="content-title content-title_author">Об авторе</h2>
           <p class="author__about-text">Это блок с описаением автора проекта.</p>
@@ -67,8 +67,8 @@
         <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
       </menu>
       <ul class="footer__social">
-        <li><a href=""><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
-        <li><a href=""><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+        <li><a href="https://github.com/EvgeniyL0"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100022798724794"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
       </ul>
     </footer>
   </div>
