--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,12 @@
       <div class="section-content">
         <div class="results__loading">
           <div class="loader"></div>
+          <p class="content-subtitle content-subtitle_loading">Идёт загрузка...</p>
+        </div>
+        <div class="results__not-found">
           <img src="./images/not-found.svg" alt="Не найдено" class="results__not-found-image">
-          <h2 class="content-title content-title_load">Ничего не найдено</h2>
-          <p class="content-subtitle content-subtitle_load"></p>
+          <h2 class="content-title content-title_loading">Ничего не найдено</h2>
+          <p class="content-subtitle content-subtitle_loading">К сожалению по вашему запросу ничего не найдено</p>
         </div>
         <div class="results__wrapper">
           <div class="section-header">
@@ -67,8 +70,10 @@
         <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
       </menu>
       <ul class="footer__social">
-        <li><a href="https://github.com/EvgeniyL0"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
-        <li><a href="https://www.facebook.com/profile.php?id=100022798724794"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
+        <li><a href="https://github.com/EvgeniyL0"><img src="./images/github-icon.svg" alt="Github иконка"
+              class="footer__social-icon"></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100022798724794"><img src="./images/fb-icon.svg"
+              alt="Facebook иконка" class="footer__social-icon"></a></li>
       </ul>
     </footer>
   </div>
