--- a/src/about.html
+++ b/src/about.html
@@ -83,7 +83,7 @@
             <div class="section-content">
                 <div class="section-header">
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
-                    <a href="" class="section-header__link section-header__link_commits">Открыть в GitHub &gt;</a>
+                    <a href="" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
                 </div>
                 <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
                     <div class="carousel-cell">
@@ -159,19 +159,19 @@
                             dynamically parsed, and produce output depending on what you type in the abb...</p>
                     </div>
                 </div>
-                <button type="submit" class="button button_open-link">Открыть в GitHub</button>
+                <a href="" target="_blank"><button class="button button_open-link">Открыть в GitHub</button></a>
             </div>
         </section>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Supersite</p>
-            <menu class="menu">
-                <a href="./index.html" class="menu__link">Главная</a>
-                <a href="./about.html" class="menu__link">О проекте</a>
-                <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
-            </menu>
+            <ul class="footer__links">
+                <li><a href="./index.html" class="footer__link">Главная</a></li>
+                <li><a href="./about.html" class="footer__link">О проекте</a></li>
+                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
+            </ul>
             <ul class="footer__social">
-                <li><a href="https://github.com/EvgeniyL0"><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100022798724794"><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
             </ul>
         </footer>
     </div>
