Added logic for about page

--- a/src/about.html
+++ b/src/about.html
@@ -85,80 +85,7 @@
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
                     <a href="" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
                 </div>
-                <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                </div>
+                <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'></div>
                 <a href="" target="_blank"><button class="button button_open-link">Открыть в GitHub</button></a>
             </div>
         </section>
