Level-2 for review

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
     </section>
     <section class="author root__section">
       <div class="section-content section-content_author">
-        <img src="" alt="Фото автора" class="author__photo">
+        <img src="./images/author.jpg" alt="Фото автора" class="author__photo">
         <div class="author__about">
           <h2 class="content-title content-title_author">Об авторе</h2>
           <p class="author__about-text">Это блок с описаением автора проекта.</p>
