--- a/analytics.html
+++ b/analytics.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/analytics.37cd6446a3542ea441e8.css">
+    <link rel="stylesheet" href="./assets/analytics.674dbc687a65d12efe2e.css">
 </head>
 
 <body>
@@ -26,9 +26,6 @@
                     <li><a href="./index.html">Главная</a></li>
                     <li>Аналитика</li>
                 </ul>
-                <h1 class="content-title content-title_summary">Вы спросили: </h1>
-                <p class="summary__number-of-news">Новостей за неделю: </p>
-                <p class="summary__number-of-references">Упоминаний в заголовках: </p>
             </div>
         </section>
         <section class="details root__section">
@@ -39,41 +36,13 @@
                         <p class="diagram__column-name">ДАТА</p>
                         <p class="diagram__column-name">КОЛ-ВО УПОМИНАНИЙ</p>
                     </div>
-                    <p class="diagram__month">(АВГУСТ)</p>
+                    <p class="diagram__month"></p>
                     <div class="diagram__scale">
                         <p>0</p>
                         <p>25</p>
                         <p>50</p>
                         <p>75</p>
                         <p>100</p>
-                    </div>
-                    <div class="diagram__row diagram__row_first">
-                        <p class="diagram__row-name diagram__row-name_day_mon">, пн</p>
-                        <div class="diagram__bar diagram__bar_day_mon"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_tue">, вт</p>
-                        <div class="diagram__bar diagram__bar_day_tue"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_wed">, ср</p>
-                        <div class="diagram__bar diagram__bar_day_wed"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_thu">, чт</p>
-                        <div class="diagram__bar diagram__bar_day_thu"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_fri">, пт</p>
-                        <div class="diagram__bar diagram__bar_day_fri"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_sat">, сб</p>
-                        <div class="diagram__bar diagram__bar_day_sat"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_sun">, вс</p>
-                        <div class="diagram__bar diagram__bar_day_sun"></div>
                     </div>
                     <div class="diagram__scale">
                         <p>0</p>
@@ -87,18 +56,18 @@
         </section>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Supersite</p>
-            <menu class="menu">
-                <a href="./index.html" class="menu__link">Главная</a>
-                <a href="./about.html" class="menu__link">О проекте</a>
-                <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
-            </menu>
+            <ul class="footer__links">
+                <li><a href="./index.html" class="footer__link">Главная</a></li>
+                <li><a href="./about.html" class="footer__link">О проекте</a></li>
+                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
+            </ul>
             <ul class="footer__social">
-                <li><a href="https://github.com/EvgeniyL0"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100022798724794"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
+                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/analytics.58d83c547b5fd8e3224c.js"></script>
+    <script type="module" src="./assets/index.bc49a26ebc6aa9b338a8.js"></script>
 </body>
 
 </html>
