--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Evgeniy Lobanov">
   <title>NewsAnalyzer</title>
   <link rel="icon" type="image/png" href="./images/favicon.png" />
-  <link rel="stylesheet" href="./assets/index.76a7a4400d0602616e28.css">
+  <link rel="stylesheet" href="./assets/index.be4db76d664e19f39cae.css">
 </head>
 
 <body>
@@ -27,8 +27,8 @@
           она была в новостях за
           прошедшую неделю.</p>
         <form class="search__form" name="search" novalidate>
-          <input type="text" class="search__input" name="topic" placeholder="Введите тему новости">
-          <button type="submit" class="button button_search">Искать</button>
+          <input type="text" class="search__input" name="topic" placeholder="Введите тему новости" required>
+          <button type="submit" class="button button_search" name="search" disabled>Искать</button>
         </form>
       </div>
     </section>
@@ -36,61 +36,26 @@
       <div class="section-content">
         <div class="results__loading">
           <div class="loader"></div>
-          <p class="content-subtitle content-subtitle_load">Идёт загрузка...</p>
+          <p class="content-subtitle content-subtitle_loading">Идёт загрузка...</p>
+        </div>
+        <div class="results__not-found">
           <img src="./images/not-found.svg" alt="Не найдено" class="results__not-found-image">
-          <h2 class="content-title content-title_load">Ничего не найдено</h2>
-          <p class="content-subtitle content-subtitle_load">К сожалению по вашему запросу ничего не найдено</p>
+          <h2 class="content-title content-title_loading">Ничего не найдено</h2>
+          <p class="content-subtitle content-subtitle_loading">К сожалению по вашему запросу ничего не найдено</p>
         </div>
         <div class="results__wrapper">
           <div class="section-header">
             <h2 class="content-title content-title_section-header">Результаты поиска</h2>
             <a href="./analytics.html" class="section-header__link">Посмотреть аналитику &gt;</a>
           </div>
-          <div class="results__news-cards">
-            <div class="card">
-              <img src="./images/sample.jpg" alt="Иллюстрация" class="card__image">
-              <div class="card__description">
-                <p class="card__date">2 августа, 2019</p>
-                <a href="" class="card__news-title">Национальное достояние - парки</a>
-                <p class="card__news-text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
-                  складываться
-                  система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.
-                </p>
-                <p class="card__source">ЛЕНТА.РУ</p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="./images/sample.jpg" alt="Иллюстрация" class="card__image">
-              <div class="card__description">
-                <p class="card__date">2 августа, 2019</p>
-                <a href="" class="card__news-title">Национальное достояние - парки</a>
-                <p class="card__news-text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
-                  складываться
-                  система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.
-                </p>
-                <p class="card__source">ЛЕНТА.РУ</p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="./images/sample.jpg" alt="Иллюстрация" class="card__image">
-              <div class="card__description">
-                <p class="card__date">2 августа, 2019</p>
-                <a href="" class="card__news-title">Национальное достояние - парки</a>
-                <p class="card__news-text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
-                  складываться
-                  система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.
-                </p>
-                <p class="card__source">ЛЕНТА.РУ</p>
-              </div>
-            </div>
-          </div>
+          <div class="results__news-cards"></div>
           <button class="button button_more">Показать ещё</button>
         </div>
       </div>
     </section>
     <section class="author root__section">
       <div class="section-content section-content_author">
-        <img src="" alt="Фото автора" class="author__photo">
+        <img src="./images/author.jpg" alt="Фото автора" class="author__photo">
         <div class="author__about">
           <h2 class="content-title content-title_author">Об авторе</h2>
           <p class="author__about-text">Это блок с описаением автора проекта.</p>
@@ -99,18 +64,20 @@
     </section>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Supersite</p>
-      <menu class="menu">
-        <a href="./index.html" class="menu__link">Главная</a>
-        <a href="./about.html" class="menu__link">О проекте</a>
-        <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
-      </menu>
+      <ul class="footer__links">
+        <li><a href="./index.html" class="footer__link">Главная</a></li>
+        <li><a href="./about.html" class="footer__link">О проекте</a></li>
+        <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
+      </ul>
       <ul class="footer__social">
-        <li><a href="https://github.com/EvgeniyL0"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
-        <li><a href="https://www.facebook.com/profile.php?id=100022798724794"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
+        <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github иконка"
+              class="footer__social-icon"></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg"
+              alt="Facebook иконка" class="footer__social-icon"></a></li>
       </ul>
     </footer>
   </div>
-  <script type="module" src="./assets/index.7429feff1645efbb085c.js"></script>
+  <script type="module" src="./assets/index.d6f58c99e74e67faabab.js"></script>
 </body>
 
 </html>
