Fixed slider bag

--- a/src/about.html
+++ b/src/about.html
@@ -85,7 +85,7 @@
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
                     <a href="" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
                 </div>
-                <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'></div>
+                <div class="main-carousel"></div>
                 <a href="" target="_blank"><button class="button button_open-link">Открыть в GitHub</button></a>
             </div>
         </section>
