--- a/src/analytics.html
+++ b/src/analytics.html
@@ -44,6 +44,7 @@
                         <p>75</p>
                         <p>100</p>
                     </div>
+                    <div class="diagram__chart-area"></div>
                     <div class="diagram__scale">
                         <p>0</p>
                         <p>25</p>
