--- a/src/analytics.html
+++ b/src/analytics.html
@@ -17,8 +17,8 @@
             <header class="header">
                 <p class="header__logo">NewsAnalyzer</p>
                 <nav class="header__page-links">
-                    <a href="./index.html" class="header__page header__page_theme_dark">Главная</a>
-                    <a href="./about.html" class="header__page header__page_theme_dark">О проекте</a>
+                    <a href="./index.html" class="header__page header__page_not-active header__page_not-active_theme_dark">Главная</a>
+                    <a href="./about.html" class="header__page header__page_not-active header__page_not-active_theme_dark">О проекте</a>
                 </nav>
             </header>
             <div class="section-content">
@@ -48,32 +48,32 @@
                         <p>100</p>
                     </div>
                     <div class="diagram__row diagram__row_first">
-                        <p class="diagram__row-name diagram__row-name_day_mon">, пн</p>
-                        <div class="diagram__bar diagram__bar_day_mon"></div>
+                        <p class="diagram__row-name diagram__row-name_day_1">, пн</p>
+                        <div class="diagram__bar diagram__bar_day_1"></div>
                     </div>
                     <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_tue">, вт</p>
-                        <div class="diagram__bar diagram__bar_day_tue"></div>
+                        <p class="diagram__row-name diagram__row-name_day_2">, вт</p>
+                        <div class="diagram__bar diagram__bar_day_2"></div>
                     </div>
                     <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_wed">, ср</p>
-                        <div class="diagram__bar diagram__bar_day_wed"></div>
+                        <p class="diagram__row-name diagram__row-name_day_3">, ср</p>
+                        <div class="diagram__bar diagram__bar_day_3"></div>
                     </div>
                     <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_thu">, чт</p>
-                        <div class="diagram__bar diagram__bar_day_thu"></div>
+                        <p class="diagram__row-name diagram__row-name_day_4">, чт</p>
+                        <div class="diagram__bar diagram__bar_day_4"></div>
                     </div>
                     <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_fri">, пт</p>
-                        <div class="diagram__bar diagram__bar_day_fri"></div>
+                        <p class="diagram__row-name diagram__row-name_day_5">, пт</p>
+                        <div class="diagram__bar diagram__bar_day_5"></div>
                     </div>
                     <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_sat">, сб</p>
-                        <div class="diagram__bar diagram__bar_day_sat"></div>
+                        <p class="diagram__row-name diagram__row-name_day_6">, сб</p>
+                        <div class="diagram__bar diagram__bar_day_6"></div>
                     </div>
                     <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_sun">, вс</p>
-                        <div class="diagram__bar diagram__bar_day_sun"></div>
+                        <p class="diagram__row-name diagram__row-name_day_7">, вс</p>
+                        <div class="diagram__bar diagram__bar_day_7"></div>
                     </div>
                     <div class="diagram__scale">
                         <p>0</p>
@@ -87,14 +87,14 @@
         </section>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Supersite</p>
-            <menu class="menu">
-                <a href="./index.html" class="menu__link">Главная</a>
-                <a href="./about.html" class="menu__link">О проекте</a>
-                <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
-            </menu>
+            <ul class="footer__links">
+                <li><a href="./index.html" class="footer__link">Главная</a></li>
+                <li><a href="./about.html" class="footer__link">О проекте</a></li>
+                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
+            </ul>
             <ul class="footer__social">
-                <li><a href="https://github.com/EvgeniyL0"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100022798724794"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
+                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
             </ul>
         </footer>
     </div>
